--- a/wiki/TODO.wiki
+++ b/wiki/TODO.wiki
@@ -1,7 +1,7 @@
 #summary Tasks left to do for Totem EDK
 
 = Tasks =
- * 2) Add componentRemoved signal
+ * 2) Add componentRemoved signal to component container
  * 2) Rewrite component/component container to use same structure as property/property container with IComponent, rtti type identification, etc
  * 2) PropertyList needs to be updated to work with latest C++11 methods of iterating over std vector.
  * 2) Rewrite DelegateSystem to use std::function.
