--- a/wiki/TODO.wiki
+++ b/wiki/TODO.wiki
@@ -24,6 +24,7 @@ which needs to get access to the properties added by a component.
  * 11) Evaluate options for pooling/more cache-friendly memory handling.
 
 = Fixed TODOs =
+ * 1) getType/getTypeId implementations were not competent between compilers/platforms using typeid, thus we couldn't use it for storing a safe type. Thus, dropped the getType string, and renamed getTypeId to getRuntimeTypeId. One will have to specify ones own type identifier system from now on, which is the only practically sound thing to do in C++ anyway. ComponentContainer now uses the getRuntimeTypeId unsigned int as lookup of component types as well, which should speed up thing a little bit compared to the string lookup that was in there earlier, so we did achieve something with this change at least!
  * 2) getType and getTypeId on instances of Property, PropertyList and Component no longer store a copy of the type locally, but instead just pass the call on to the static functions in their respective interfaces, thus only storing the type information once per type.
  * 1) Add non-const ref versions of get() function on Property, PropertyList and PropertyListIndexValue. When these are called, one has to handle the valueChanged, and other value state changing actions via invoking the appropriate signal manually.
  * 2) Add componentRemoved signal to component container
