Edited wiki page TODO through web user interface.

--- a/wiki/TODO.wiki
+++ b/wiki/TODO.wiki
@@ -24,6 +24,8 @@ which needs to get access to the properties added by a component.
  * 11) Evaluate options for pooling/more cache-friendly memory handling.
 
 = Fixed TODOs =
+ * 2) Took out factory from ComponentContainer, and the 12 versions of addComponent that would construct components internally. Instead this is now handled by user, and the option of two addComponent functions is given, either by IComponent or by ComponentType via template definition. The reason was that construction for general, flexible situations were just getting too complex. Changing the Standard approach should be handled via cmake preprocessor.
+ * 2) As an experiment, took out all template factories, and instead just use those defined for properties. Should use cmake preprocessor to change this from Standard approach.
  * 1) getType/getTypeId implementations were not competent between compilers/platforms using typeid, thus we couldn't use it for storing a safe type. Thus, dropped the getType string, and renamed getTypeId to getRuntimeTypeId. One will have to specify ones own type identifier system from now on, which is the only practically sound thing to do in C++ anyway. ComponentContainer now uses the getRuntimeTypeId unsigned int as lookup of component types as well, which should speed up thing a little bit compared to the string lookup that was in there earlier, so we did achieve something with this change at least!
  * 2) getType and getTypeId on instances of Property, PropertyList and Component no longer store a copy of the type locally, but instead just pass the call on to the static functions in their respective interfaces, thus only storing the type information once per type.
  * 1) Add non-const ref versions of get() function on Property, PropertyList and PropertyListIndexValue. When these are called, one has to handle the valueChanged, and other value state changing actions via invoking the appropriate signal manually.
