--- a/wiki/TODO.wiki
+++ b/wiki/TODO.wiki
@@ -1,7 +1,8 @@
 #summary Tasks left to do for Totem EDK
 
 = Tasks =
- * Remove getType from Property and make it similar to Component
+ * 1) Remove getType from Property and make it similar to Component
+ * 2) Evaluate whether PropertyContainer should use unique_ptr on it's instanced properties internally.
  * 2) PropertyList needs to be updated to work with latest C++11 methods of iterating over std vector.
  * 2) Rewrite DelegateSystem to use std::function.
  * 3) Revisit Totem's exception handling. Make sure it's used correctly in all situations.
@@ -16,6 +17,7 @@
    * Docs/Wiki
      * Make note that for complex objects stored in a Property, when changed via a function call to the reference of the stored object that changes the object's state, a custom call to valueChanged().invoke() has to be performed in order to broadcast the changed state of the property. There's no way for totem's property to track such changes automatically.
      * UserData template option for PropertyContainer is explained as follows: The propertyWithUserDataAdded() allows external logic to access this functionality, like for instance an Editor. UserData can be specified if, for instance an editor, needs some special data collected for properties, like the name of the component it was added to, or an instance to it even. As UserData is a template set on the PropertyContainer, it's up to the end-user's implementation of the Entity class to determine the type of the UserData template used for this which needs to get access to the properties added by a component.
+     * Document that in Property's set function, the optional invokeValueChanged parameter is there so that users can prevent callback-loops when one has to change the value of a property in that property's valueChanged slot. Mostly, this is to handle some rare corner-cases.
  * 8) Write stress tests for all features of Totem EDK.
  * 9) Write simple game example.
  * 10) Write Entity Editor tool.
